force-app/main/default/objects/AuditFields__c/AuditFields__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Audit Fields</label>
</CustomObject>