force-app/main/default/objects/AuditFields__c/fields/Fields3__c.field-meta.xml
<CustomField>
    <fullName>Fields3__c</fullName>
    <description>Additional fields (to overcome 255 character custom setting limit)</description>
    <inlineHelpText>Additional fields (to overcome 255 character custom setting limit)</inlineHelpText>
    <label>Fields3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>