force-app/main/default/objects/AuditFields__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>List of comma delimited API field names</description>
    <inlineHelpText>List of comma delimited API field names (i.e. first_name__c,last_name__c etc.)</inlineHelpText>
    <label>Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>